# motion_master_lib_examples

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  gdb.sh  vcpkg.json
include/comm/: base.h  soem.h  spoe.h
include/core/: timer.h  util.h
lib/: core.lib  core_debug.lib
loguru/: CMakeLists.txt  loguru.cc  loguru.h
src/: spoe.cpp
